[package]
name = "gh-governor"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.20", features = ["derive", "env"] }
glob = "0.3.1"
octocrab = "0.40.0"
percent-encoding = "2.3.1"
owo-colors = { version = "4.2.0", features = ["supports-colors"] }
reqwest = { version = "0.12.8", features = ["json", "rustls-tls"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
serde_yaml = "0.9.34"
thiserror = "1.0.69"
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread"] }
toml = "0.8.19"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }
